frontend/input.css
@import "tailwindcss";
@config "./tailwind.config.js";

@plugin "daisyui" {
    themes:
        light, dark, dim, nord, cupcake, dracula, cyberpunk, emerald, sunset,
        abyss;
}

@layer base {
    html,
    body {
        @apply min-h-[100dvh] w-full overflow-hidden bg-base-100 text-base-content overscroll-y-none;
    }
}

/* Fix for iOS click/blur events */
@media (hover: none) {
    body {
        cursor: pointer;
    }
}

/* Remove default focus outline/tap highlight */
* {
    -webkit-tap-highlight-color: transparent;
    outline: none !important;
}

:focus {
    outline: none !important;
}

